--- a/public/config.json
+++ b/public/config.json
@@ -17,7 +17,7 @@
         "execute": {
            "inArguments":[],
           "outArguments": [],
-          "url": "https://https://firsttrynow.herokuapp.com//journeybuilder/execute",
+          "url": "https://firsttrynow.herokuapp.com//journeybuilder/execute",
            "verb": "POST",
             "body": "",
             "header": "",
@@ -28,22 +28,22 @@
     },
     "configurationArguments": {
       "save": {
-        "url": "https://https://firsttrynow.herokuapp.com//journeybuilder/save",
+        "url": "https://firsttrynow.herokuapp.com//journeybuilder/save",
           "verb": "POST",
         "useJwt": true
        },
        "publish": {
-        "url": "https://https://firsttrynow.herokuapp.com//journeybuilder/publish",
+        "url": "https://firsttrynow.herokuapp.com//journeybuilder/publish",
            "verb": "POST",
         "useJwt": true
        },
       "stop": {
-        "url": "https://https://firsttrynow.herokuapp.com//journeybuilder/stop",
+        "url": "https://firsttrynow.herokuapp.com//journeybuilder/stop",
            "verb": "POST",
         "useJwt": true
       },
       "validate": {
-        "url": "https://https://firsttrynow.herokuapp.com//journeybuilder/validate",
+        "url": "https://firsttrynow.herokuapp.com//journeybuilder/validate",
         "verb": "POST",
         "useJwt": true
       }
